examples/test/testpolicy7219.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7219
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key25: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value24
          key48: value47
      podSelector:
        matchLabels:
          key19: value19
          key25: value13
          key7: value7
